--- a/textzone_right.inc.html.dist
+++ b/textzone_right.inc.html.dist
@@ -4,6 +4,6 @@
             font-size:80%;
             color: gray;">
 This text zone is displayed to each unauthenticated user. Platform administrator 
-can change its content or remove it by editing the <b>textzone_left.inc.html</b> 
+can change its content or remove it by editing the <b>textzone_right.inc.html</b> 
 file.
 </div>
