- add 2 option to activate in profile.conf
* CAN_REQUEST_COURSE_CREATOR_STATUS
If true,  user can send a commented request
* CAN_REQUEST_REVOQUATION
If true,  user can send a commented request

--- a/claroline/inc/conf/profile.conf.inc.php.dist
+++ b/claroline/inc/conf/profile.conf.inc.php.dist
@@ -6,6 +6,10 @@
 // check if the password is not too much easy to find
 define ('SECURE_PASSWORD_REQUIRED', true);
 
+
+define ('CAN_REQUEST_COURSE_CREATOR_STATUS',FALSE);
+define ('CAN_REQUEST_REVOQUATION',FALSE);
+
 $userOfficialCodeCanBeEmpty = true;
 $userMailCanBeEmpty			= true;
 
