--- a/textzone_right.inc.html.dist
+++ b/textzone_right.inc.html.dist
@@ -3,7 +3,8 @@
             padding: 10px;
             font-size:80%;
             color: gray;">
-This text zone is displayed to each unauthenticated user. Platform administrator 
-can change its content or remove it by editing the <b>textzone_right.inc.html</b> 
+This text zone is displayed to each user. 
+Platform administrator can change its content 
+or remove it by editing the <b>textzone_right.inc.html</b> 
 file.
 </div>
