--- a/textzone_top.inc.html.dist
+++ b/textzone_top.inc.html.dist
@@ -3,9 +3,9 @@
             padding: 10px;
             font-size:80%;
             color: gray;">
-This text zone is displayed to each unauthenticated user. Platform administrator 
-can change its content or remove it by editing the <b>textzone_top.inc.html</b> 
-file.
+This text zone is displayed to each user. 
+Platform administrator can change its content 
+or remove it by editing the <b>textzone_top.inc.html</b> file.
 </div>
 
 
