--- a/textzone_top.inc.html.dist
+++ b/textzone_top.inc.html.dist
@@ -1,11 +1,7 @@
-<div style="border: gray 1px dashed;
-            margin: 10px;
-            padding: 10px;
-            font-size:80%;
-            color: gray;">
+<fieldset>
+<p style="margin: 10px; padding: 10px;" class="HelpText">
 This text zone is displayed to each user. 
 Platform administrator can change its content 
 or remove it by editing the <b>textzone_top.inc.html</b> file.
-</div>
-
-
+</p>
+</fieldset>
