--- a/textzone_top.inc.html.dist
+++ b/textzone_top.inc.html.dist
@@ -1,7 +1,5 @@
-<fieldset>
-<p style="margin: 10px; padding: 10px;" class="HelpText">
+<div style="margin: 10px; padding: 10px;" class="HelpText">
 This text zone is displayed to each user. 
 Platform administrator can change its content 
 or remove it by editing the <b>textzone_top.inc.html</b> file.
-</p>
-</fieldset>
+</div>
