add a constant setting the path to the pear library. needed for the new external authentication system

--- a/claroline/inc/conf/claro_main.conf.php.dist
+++ b/claroline/inc/conf/claro_main.conf.php.dist
@@ -63,6 +63,17 @@ $CourseProgram="http://www.ucl.ac.be/etudes/cours";
 $platformLanguage 	= 	"english";
 
 
+// Path to the PEAR library. PEAR stands for 'PHP Extension and Application 
+// Repository'. It is a framework and distribution system for reusable PHP 
+// components. More on http://pear.php.net.
+// Claroline is provided with the basic PEAR components needed by the 
+// application in the 'claroline/inc/lib/pear' directory. But, server 
+// administator can redirect to their own PEAR library directory by setting 
+// its path to the PEAR_LIB_PATH constant.
+
+define('PEAR_LIB_PATH', $includePath.'/lib/pear');
+
+
 
 // Strings
 $siteName				=	"site Name";
