--- a/claroline/inc/lib/JPSpan/JPSpan/errors/errors.en.ini
+++ b/claroline/inc/lib/JPSpan/JPSpan/errors/errors.en.ini
@@ -1,4 +1,5 @@
 ; $Id$
+; Edit message to personalise error messages
 [Client_Error]
 ; Client Errors (range 1000 - 1999)
 ; Range 1000 - 1199 is reserved - avoid using them in your code!
