--- a/claroline/inc/conf/auth.conf.php.dist
+++ b/claroline/inc/conf/auth.conf.php.dist
@@ -88,6 +88,10 @@
 // $extAuthSource['atutor']['login'  ] = $clarolineRepositorySys.'/auth/extauth/drivers/atutor.inc.php';
 // $extAuthSource['atutor']['login'  ] = $clarolineRepositorySys.'/auth/extauth/drivers/atutor.inc.php';
 
+/* MAMBO */
+// $extAuthSource['mambo']['login'  ] = $clarolineRepositorySys.'auth/extauth/drivers/mambo.inc.php';
+// $extAuthSource['mambo']['newUser'] = $clarolineRepositorySys.'auth/extauth/drivers/mambo.inc.php';
+
 
 // --------------------------------------------
 // CENTRAL AUTHENTICATION SERVICE (CAS) SECTION
@@ -100,11 +104,11 @@ $claro_CasLibPath       = $includePath.'/lib/cas/CAS.php';
 $claro_CasProcessPath   = $clarolineRepositorySys.'/auth/extauth/casProcess.inc.php';
 
 // ---------------------------------------
-// CLAROLINE SINGLE SIGN OUT (SSO) SECTION
+// CLAROLINE SINGLE SIGN ON (SSO) SECTION
 // ---------------------------------------
 
 /**
- * SINGLE SIGN OUT (SSO)
+ * SINGLE SIGN ON (SSO)
  *
  * Once a user logs to the Claroline platform a cookie is sent to the 
  * user browser if the authentication process succeeds. The cookie value 
